--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11984,3 +11984,9 @@ label.panel-block:hover {
   padding: 1.5rem 0.75rem 3rem;
 }
 
+.is-disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.65;
+}
+
