--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,8 @@
 $footer-padding: 1.5rem 0.75rem 3rem !default; // Bulma footer size.
 @import "~bulma/bulma.sass";
+
+.is-disabled {
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.65;
+}
