--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11990,3 +11990,17 @@ label.panel-block:hover {
   opacity: 0.65;
 }
 
+.GreenPlus {
+  color: green;
+  cursor: cell;
+}
+
+.freepoints {
+  font-weight: 800;
+  font-family: monospace;
+}
+
+.skillnames {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
