--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,16 @@ $footer-padding: 1.5rem 0.75rem 3rem !default; // Bulma footer size.
     cursor: not-allowed;
     opacity: 0.65;
 }
+
+.GreenPlus {
+    color: green;
+    cursor: cell;
+}
+
+.freepoints {
+    font-weight: 800;
+    font-family: monospace;
+}
+.skillnames {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
