--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Trade+Winds&display=swap);@import url(https://fonts.googleapis.com/css?family=Bree+Serif&display=swap);@charset "UTF-8";
 
 /*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
 
@@ -11985,9 +11985,9 @@ label.panel-block:hover {
 }
 
 .is-disabled {
-  pointer-events: none;
   cursor: not-allowed;
-  opacity: 0.65;
+  pointer-events: all !important;
+  opacity: 1;
 }
 
 .GreenPlus {
@@ -12002,5 +12002,29 @@ label.panel-block:hover {
 
 .skillnames {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.themeFont {
+  font-family: "Trade Winds", curs;
+  color: orange;
+}
+
+.themeFontLight {
+  font-family: "Bree Serif", serif !important;
+  color: white !important;
+}
+
+@font-face {
+  font-family: Futura;
+  src: url("/fonts/Futura Book font.ttf");
+}
+
+.themeText {
+  font-family: Futura;
+}
+
+.container-fluid {
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/img/wallpaper.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
