--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,6 +33,11 @@ $footer-padding: 1.5rem 0.75rem 3rem !default; // Bulma footer size.
     color: white !important;
 }
 
+.themeFontDark {
+    font-family: "Trade Winds", curs;
+    color: black;
+}
+
 @font-face {
     font-family: Futura;
     src: url("/fonts/Futura Book font.ttf");
